test/core/errors/array_types_error/zs/implicit_array_bitfield_with_wrong_length_error.zs
package implicit_array_bitfield_with_wrong_length_error;

struct ImplicitArrayBitfieldWithWrongLengthError
{
    implicit bit:7 array[];
};
